// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell Cell should render correctly for a reset 1`] = `
<div
  className="cell__container cell__container--3"
>
  <div
    className="cell__content cell__content--reset"
    onClick={[Function]}
  >
    C
  </div>
</div>
`;

exports[`Cell Cell should render correctly for an input 1`] = `
<div
  className="cell__container cell__container--4"
>
  <div
    className="cell__content cell__content--input"
    onClick={[Function]}
  >
    2 * 4 + 1
  </div>
</div>
`;

exports[`Cell Cell should render correctly for an operand 1`] = `
<div
  className="cell__container cell__container--2"
>
  <div
    className="cell__content cell__content--operand"
    onClick={[Function]}
  >
    0
  </div>
</div>
`;

exports[`Cell Cell should render correctly for an operator 1`] = `
<div
  className="cell__container cell__container--1"
>
  <div
    className="cell__content cell__content--operator"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-times fa-w-11 "
      data-icon="times"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 352 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;
